--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -14,10 +14,6 @@
 	<name>petstore-system-tests</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-		<jetty.home>C:\jetty-6.1.21</jetty.home>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -45,6 +41,12 @@
 			<artifactId>cargo-ant</artifactId>
 			<version>0.8</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+		        <groupId>org.seleniumhq.selenium</groupId>
+		        <artifactId>selenium-chrome-driver</artifactId>
+		        <version>2.0a2</version>
 		</dependency>
 
 	</dependencies>
@@ -89,7 +91,7 @@
 						<containerId>jetty6x</containerId>
 						<zipUrlInstaller>
 							<url>http://dist.codehaus.org/jetty/jetty-6.1.21/jetty-6.1.21.zip</url>
-							<installDir>${jetty.home}</installDir>
+							<installDir>${basedir}/appserver</installDir>
 						</zipUrlInstaller>
 					</container>
 				</configuration>
