--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
+		<param-value>classpath:persistenceContext.xml</param-value>
 	</context-param>
 
 	<listener>
