--- a/petstore-domain/src/main/resources/jdbc.properties
+++ b/petstore-domain/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:petstore
+jdbc.url=jdbc:hsqldb:hsql://localhost:9002
 jdbc.username=sa
 jdbc.password=
