--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -22,6 +22,11 @@
             <type>war</type>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>com.pyxis</groupId>
+			<artifactId>petstore-domain</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>	
         <dependency>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-core-uberjar</artifactId>
@@ -44,6 +49,10 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>2.0a2</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
