changed hsqldb settings to use file-based database

--- a/petstore-domain/src/main/resources/jdbc.properties
+++ b/petstore-domain/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:hsql://localhost:9002
+jdbc.url=jdbc:hsqldb:file:/opt/hsqldb/petstore
 jdbc.username=sa
 jdbc.password=
