--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -14,18 +14,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
@@ -58,5 +46,20 @@
 			<artifactId>hsqldb</artifactId>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <systemPropertyVariables>
+						<java.util.logging.config.file>logging.properties</java.util.logging.config.file>                    	
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+         </plugins>
+     </build>
 
 </project>
