--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -115,6 +115,9 @@
                             <url>http://dist.codehaus.org/jetty/jetty-6.1.21/jetty-6.1.21.zip</url>
                             <installDir>${basedir}/appserver</installDir>
                         </zipUrlInstaller>
+                        <systemProperties>
+							<java.util.logging.config.file>logging.properties</java.util.logging.config.file>                    	
+	                    </systemProperties>
                     </container>
                     <configuration>
                         <properties>
