--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,23 @@
 			<version>2.5.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.5.8</version>
+		     <scope>runtime</scope>
+		</dependency>
+		<dependency>
+		     <groupId>org.slf4j</groupId>
+		     <artifactId>jcl-over-slf4j</artifactId>
+		     <version>1.5.8</version>
+		     <scope>runtime</scope>
+		</dependency>		
 	</dependencies>
 
 	<dependencyManagement>
@@ -44,25 +61,16 @@
 				<version>3.0.0.RELEASE</version>
 				<scope>test</scope>
 			</dependency>
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.15</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>1.5.8</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.5.8</version>
-			</dependency>
-			<dependency>
+   			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
 				<version>3.0.0.RELEASE</version>
+				<exclusions>
+		         	<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+		        	</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
