Made hsqldb reside locally

--- a/petstore-domain/src/main/resources/jdbc.properties
+++ b/petstore-domain/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:file:/opt/hsqldb/petstore
+jdbc.url=jdbc:hsqldb:file:${basedir}/db/petstore
 jdbc.username=sa
 jdbc.password=
