--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -22,11 +22,11 @@
             <type>war</type>
             <scope>provided</scope>
         </dependency>
-		<dependency>
-			<groupId>com.pyxis</groupId>
-			<artifactId>petstore-domain</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>	
+        <dependency>
+            <groupId>com.pyxis</groupId>
+            <artifactId>petstore-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-core-uberjar</artifactId>
@@ -48,11 +48,17 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
             <version>2.0a2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -116,8 +122,8 @@
                             <installDir>${basedir}/appserver</installDir>
                         </zipUrlInstaller>
                         <systemProperties>
-							<java.util.logging.config.file>logging.properties</java.util.logging.config.file>                    	
-	                    </systemProperties>
+                            <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
+                        </systemProperties>
                     </container>
                     <configuration>
                         <properties>
