--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,24 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.5.8</version>
+			<version>1.5.10</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.5.8</version>
-		     <scope>runtime</scope>
-		</dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.10</version>
+             <scope>runtime</scope>
+        </dependency>
 		<dependency>
 		     <groupId>org.slf4j</groupId>
 		     <artifactId>jcl-over-slf4j</artifactId>
-		     <version>1.5.8</version>
+		     <version>1.5.10</version>
 		     <scope>runtime</scope>
 		</dependency>		
 	</dependencies>
