Moved logging to log file to make tests less verbose

--- a/petstore-domain/src/test/resources/log4j.properties
+++ b/petstore-domain/src/test/resources/log4j.properties
@@ -1,5 +1,14 @@
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=WARN, logfile
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=logs/test.log
+log4j.appender.logfile.MaxFileSize=512KB
+# Keep three backup files.
+log4j.appender.logfile.MaxBackupIndex=3
+# Pattern to output: date priority [category] - message
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - %m%n
+
+log4j.logger.org.hibernate=WARN
+log4j.logger.org.hibernate.transaction=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
