--- a/petstore-app/src/main/resources/log4j.properties
+++ b/petstore-app/src/main/resources/log4j.properties
@@ -2,14 +2,15 @@ log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - %m%n
+
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=petstore.log
+log4j.appender.logfile.File=logs/development.log
 log4j.appender.logfile.MaxFileSize=512KB
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=3
 # Pattern to output: date priority [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - %m%n
 
 log4j.logger.org.hibernate=WARN
