--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -28,6 +28,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.pyxis</groupId>
+            <artifactId>petstore-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-core-uberjar</artifactId>
             <version>0.8</version>
