Added sitemesh to the mix

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -44,6 +44,14 @@
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>sitemesh</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
