--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -16,15 +16,46 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+	<filter>
+	    <filter-name>sitemesh</filter-name>
+	    <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>sitemesh</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+
     <servlet>
         <servlet-name>petstore</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+	<servlet>
+	    <servlet-name>sitemesh-velocity</servlet-name>
+	    <servlet-class>com.opensymphony.module.sitemesh.velocity.VelocityDecoratorServlet</servlet-class>
+	</servlet>
+
+	<!-- Static resources are mapped to the default servlet so that they 
+		 are not processed by Spring -->
+	<servlet-mapping>
+    	<servlet-name>default</servlet-name>
+        <url-pattern>/images/*</url-pattern>
+    </servlet-mapping>
+	<servlet-mapping>
+    	<servlet-name>default</servlet-name>
+        <url-pattern>/css/*</url-pattern>
+    </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>petstore</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    
+	<servlet-mapping>
+	    <servlet-name>sitemesh-velocity</servlet-name>
+	    <url-pattern>*.vm</url-pattern>
+	</servlet-mapping>
 
 </web-app>
