Unit test use their own datasource configuration to avoid conflict with system tests database. Removed test profile, which was no longer necessary. Switched to mysql for production use.

--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:persistenceContext.xml</param-value>
+		<param-value>classpath:dataSource.xml, classpath:persistenceContext.xml</param-value>
 	</context-param>
 
 	<listener>
