--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -12,13 +12,6 @@
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
 
-    <properties>
-        <jdbc.driverClassName>org.hsqldb.jdbcDriver</jdbc.driverClassName>
-        <jdbc.url>jdbc:hsqldb:file:${basedir}/db/petstore</jdbc.url>
-        <jdbc.username>sa</jdbc.username>
-        <jdbc.password></jdbc.password>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -51,6 +44,7 @@
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -60,11 +54,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.5</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
-                    </systemPropertyVariables>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -85,6 +74,11 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
     </build>
-
 </project>
