--- a/petstore-domain/src/test/resources/log4j.properties
+++ b/petstore-domain/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=WARN, logfile
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=logs/test.log
+log4j.appender.logfile.File=${basedir}/logs/test.log
 log4j.appender.logfile.MaxFileSize=512KB
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=3
