--- a/petstore-system-tests/src/test/resources/log4j.properties
+++ b/petstore-system-tests/src/test/resources/log4j.properties
@@ -1,10 +1,13 @@
 log4j.rootLogger=WARN, logfile
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=logs/test.log
+log4j.appender.logfile.File=${basedir}/logs/test.log
 log4j.appender.logfile.MaxFileSize=512KB
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=3
 # Pattern to output: date priority [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - %m%n
+
+log4j.logger.org.hibernate.transaction=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
