--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -18,8 +18,13 @@
 		<dependency>
 			<groupId>com.pyxis</groupId>
 			<artifactId>petstore-domain</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${pom.version}</version>
 		</dependency>	
+        <dependency>
+            <groupId>com.pyxis</groupId>
+            <artifactId>petstore-persistence</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
