--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -18,19 +18,24 @@
         <dependency>
             <groupId>com.pyxis</groupId>
             <artifactId>petstore-app</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${pom.version}</version>
             <type>war</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.pyxis</groupId>
             <artifactId>petstore-domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${pom.version}</version>
         </dependency>
         <dependency>
             <groupId>com.pyxis</groupId>
-            <artifactId>petstore-domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>petstore-persistence</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pyxis</groupId>
+            <artifactId>petstore-persistence</artifactId>
+            <version>${pom.version}</version>
             <type>test-jar</type>
         </dependency>
         <dependency>
