--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -7,33 +7,30 @@
         <artifactId>petstore</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.pyxis</groupId>
     <artifactId>petstore-system-tests</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
     <name>petstore-system-tests</name>
-    <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
-            <groupId>com.pyxis</groupId>
+            <groupId>${pom.groupId}</groupId>
             <artifactId>petstore-app</artifactId>
             <version>${pom.version}</version>
             <type>war</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.pyxis</groupId>
+            <groupId>${pom.groupId}</groupId>
             <artifactId>petstore-domain</artifactId>
             <version>${pom.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.pyxis</groupId>
+            <groupId>${pom.groupId}</groupId>
             <artifactId>petstore-persistence</artifactId>
             <version>${pom.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.pyxis</groupId>
+            <groupId>${pom.groupId}</groupId>
             <artifactId>petstore-persistence</artifactId>
             <version>${pom.version}</version>
             <type>test-jar</type>
