--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,19 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-resources-plugin</artifactId>
+		        <version>2.2</version>
+		        <configuration>
+		          <encoding>UTF-8</encoding>
+		        </configuration>
+		    </plugin>
+		      
 		</plugins>
+
+
 	</build>
 
 
